<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@color/md_grey_200"
    tools:context=".CategoryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/md_black_1000" />

    <TextView
        android:id="@+id/username_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="end"
        android:text="@string/username_ET_hint"
        android:textSize="22sp"
        android:textColor="@color/md_black_1000"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/header_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_gravity="center"
        android:text="@string/category_TV_text"
        android:textSize="25sp"
        android:textColor="@color/md_black_1000"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_RV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/category_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_menu_add" />


</LinearLayout>